--- a/style.css
+++ b/style.css
@@ -1,119 +1,183 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 button,
 input,
 select,
 textarea {
-    font-family: inherit;
+  font-family: inherit;
 }
 
 a {
-    text-decoration: none;
-    color: currentColor;
+  text-decoration: none;
+  color: currentColor;
 }
 
 li {
-    list-style: none;
+  list-style: none;
 }
 
 body {
-    background: rgb(222, 220, 220);
-    font-family: "Poppins", sans-serif;
-    position: relative;
+  background: rgb(239, 238, 238);
+  font-family: "Poppins", sans-serif;
+  position: relative;
+}
+
+.hidden {
+  display: none;
+}
+
+.inverted {
+  transform: rotate(180deg);
 }
 
 .container {
-    max-width: 1569px;
-    margin: 0 auto;
+  max-width: 1569px;
+  margin: 0 auto;
 }
 
 header {
-    position: sticky;
-    top: 0;
-    background-color: #fff;
-    border-bottom: 1px solid #888;
+  position: sticky;
+  top: 0;
+  background-color: #fff;
+  border-bottom: 1px solid #888;
+  z-index: 10000;
 }
 
 header .container {
-    display: flex;
-    justify-content: space-between;
-    padding: 20px 0;
+  display: flex;
+  justify-content: space-between;
+  padding: 20px 0;
 }
 
 header .container .mode-container {
-    display: flex;
-    align-items: center;
-    font-weight: 700;
-    color: #888;
-    font-size: 20px;
-    gap: 10px;
+  display: flex;
+  align-items: center;
+  font-weight: 700;
+  color: #888;
+  font-size: 20px;
+  gap: 10px;
 }
 
 header .container .mode-container img {
-    width: 30px;
-    height: 30px;
+  width: 30px;
+  height: 30px;
 }
 
 main {
-    margin-top: 50px;
-    margin-bottom: 200px;
-    display: flex;
-    flex-direction: column;
+  margin-top: 50px;
+  margin-bottom: 200px;
+  display: flex;
+  flex-direction: column;
 }
 
-main input {
-    width: 500px;
-    height: 70px;
-    border: none;
-    outline: none;
-    padding: 16px;
-    font-size: 18px;
+main .top-side {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+main .top-side .search-container {
+  display: flex;
+  box-shadow: 0px 1px 5px 1px rgba(0, 0, 0, 0.14);
+  border-radius: 10px;
+  overflow: hidden;
+}
+
+main .top-side .search-container button {
+  cursor: pointer;
+  background-color: #fff;
+  width: 100px;
+  border: 2px solid #88888870;
+  border-left: none;
+}
+
+main .top-side .search-container button:active {
+  filter: brightness(95%);
+}
+
+main .top-side .search-container input {
+  width: 500px;
+  height: 70px;
+  border: none;
+  outline: none;
+  padding: 16px;
+  font-size: 18px;
+  border: 2px solid #88888870;
+}
+
+main .top-side .dropdown {
+  display: flex;
+  background: #fff;
+  padding: 20px;
+  border-radius: 8px;
+  gap: 30px;
+  font-size: 14px;
+  font-weight: 500;
+  cursor: pointer;
+  position: relative;
+  z-index: 5;
+  box-shadow: 0px 1px 5px 1px rgba(0, 0, 0, 0.14);
+}
+
+main .top-side .dropdown .dropdown-menu {
+  position: absolute;
+  background: #fff;
+  padding: 16px 20px;
+  width: 100%;
+  border-radius: 8px;
+  top: calc(100% + 5px);
+  left: 0;
+}
+
+main .top-side .dropdown .dropdown-menu ul {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
 }
 
 main .card-container {
-    margin-top: 50px;
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(2, 1fr);
-    gap: 100px;
+  margin-top: 50px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 100px;
 }
 
 main .card-container .card {
-    border-radius: 12px;
-    overflow: hidden;
-    background: #FFF;
-    box-shadow: 0px 1px 10px 0px rgba(0, 0, 0, 0.124);
+  border-radius: 12px;
+  overflow: hidden;
+  background: #fff;
+  box-shadow: 0px 1px 10px 0px rgba(0, 0, 0, 0.124);
 }
 
 main .card-container .card .info {
-    padding: 30px 20px;
+  padding: 30px 20px;
 }
 
 main .card-container .card .info h2 {
-    font-size: 20px;
-    font-weight: 800;
-    margin-bottom: 12px;
+  font-size: 20px;
+  font-weight: 800;
+  margin-bottom: 12px;
 }
 
 main .card-container .card .info p {
-    font-weight: 500;
-    font-size: 16px;
+  font-weight: 500;
+  font-size: 16px;
 }
 
 main .card-container .img-container {
-    width: 100%;
-    height: 50%;
-    box-sizing: content-box;
+  width: 100%;
+  height: 43%;
+  box-sizing: content-box;
 }
 
 main .card-container .img-container img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
