--- a/index.css
+++ b/index.css
@@ -1,14 +1,22 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-
+@import "https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap";
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-button,
-input,
-select,
+button {
+  font-family: inherit;
+}
+
+input {
+  font-family: inherit;
+}
+
+select {
+  font-family: inherit;
+}
+
 textarea {
   font-family: inherit;
 }
@@ -26,6 +34,7 @@ body {
   background: rgb(239, 238, 238);
   font-family: "Poppins", sans-serif;
   position: relative;
+  color: #000;
 }
 
 .hidden {
@@ -50,13 +59,11 @@ header {
   border-bottom: 1px solid #888;
   z-index: 10000;
 }
-
 header .container {
   display: flex;
   justify-content: space-between;
   padding: 20px 0;
 }
-
 header .container .mode-container {
   display: flex;
   align-items: center;
@@ -65,7 +72,6 @@ header .container .mode-container {
   font-size: 20px;
   gap: 10px;
 }
-
 header .container .mode-container img {
   width: 30px;
   height: 30px;
@@ -77,32 +83,27 @@ main {
   display: flex;
   flex-direction: column;
 }
-
 main .top-side {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
-
 main .top-side .search-container {
   display: flex;
   box-shadow: 0px 1px 5px 1px rgba(0, 0, 0, 0.14);
   border-radius: 10px;
   overflow: hidden;
 }
-
 main .top-side .search-container button {
   cursor: pointer;
   background-color: #fff;
   width: 100px;
-  border: 2px solid #88888870;
+  border: 2px solid rgba(136, 136, 136, 0.4392156863);
   border-left: none;
 }
-
 main .top-side .search-container button:active {
   filter: brightness(95%);
 }
-
 main .top-side .search-container input {
   width: 500px;
   height: 70px;
@@ -110,9 +111,8 @@ main .top-side .search-container input {
   outline: none;
   padding: 16px;
   font-size: 18px;
-  border: 2px solid #88888870;
+  border: 2px solid rgba(136, 136, 136, 0.4392156863);
 }
-
 main .top-side .dropdown {
   display: flex;
   background: #fff;
@@ -126,11 +126,9 @@ main .top-side .dropdown {
   z-index: 5;
   box-shadow: 0px 1px 5px 1px rgba(0, 0, 0, 0.14);
 }
-
 main .top-side .dropdown .chevron {
   transition: all 0.2s linear;
 }
-
 main .top-side .dropdown .dropdown-menu {
   position: absolute;
   background: #fff;
@@ -142,50 +140,43 @@ main .top-side .dropdown .dropdown-menu {
   transition: all 0.2s linear;
   z-index: 5;
 }
-
 main .top-side .dropdown .dropdown-menu ul {
   display: flex;
   flex-direction: column;
   gap: 8px;
 }
-
 main .card-container {
   margin-top: 50px;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 100px;
 }
-
 main .card-container .card {
   border-radius: 12px;
   overflow: hidden;
   background: #fff;
   box-shadow: 0px 1px 10px 0px rgba(0, 0, 0, 0.124);
 }
-
 main .card-container .card .info {
   padding: 30px 20px;
 }
-
 main .card-container .card .info h2 {
   font-size: 20px;
   font-weight: 800;
   margin-bottom: 12px;
 }
-
 main .card-container .card .info p {
   font-weight: 500;
   font-size: 16px;
 }
-
 main .card-container .img-container {
   width: 100%;
   height: 43%;
   box-sizing: content-box;
 }
-
 main .card-container .img-container img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
-}
+  -o-object-fit: cover;
+     object-fit: cover;
+}/*# sourceMappingURL=index.css.map */
