--- a/countryPage/country.css
+++ b/countryPage/country.css
@@ -1,4 +1,16 @@
 @import "https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap";
+:root {
+  --text-color: #000;
+  --bg-color: #fff;
+  --bg-color-2: rgb(239, 238, 238);
+}
+
+.dark {
+  --text-color: #fff;
+  --bg-color: #000;
+  --bg-color-2: rgb(55, 55, 55);
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -31,10 +43,10 @@ li {
 }
 
 body {
-  background: rgb(239, 238, 238);
+  background: var(--bg-color-2);
   font-family: "Poppins", sans-serif;
   position: relative;
-  color: #000;
+  color: var(--text-color);
 }
 
 .hidden {
@@ -55,7 +67,7 @@ body {
 header {
   position: sticky;
   top: 0;
-  background-color: #fff;
+  background-color: var(--bg-color);
   border-bottom: 1px solid #888;
   z-index: 10000;
 }
@@ -65,6 +77,7 @@ header .container {
   padding: 20px 0;
 }
 header .container .mode-container {
+  cursor: pointer;
   display: flex;
   align-items: center;
   font-weight: 700;
