--- a/_colors.scss
+++ b/_colors.scss
@@ -1,20 +1,26 @@
 $color_1: currentColor;
 $color_2: #888;
-$color_3: #000;
-$background-color1: #fff;
-$background-color2: rgb(239, 238, 238);
-$color_3dark: #fff;
-$background-color1_dark: #fff;
-$background-color2_dark: rgb(239, 238, 238);
 
 :root {
   --text-color: #000;
   --bg-color: #fff;
   --bg-color-2: rgb(239, 238, 238);
+  --arrow-filter1: 0;
+  --arrow-filter2: 0;
+  --arrow-filter3: 0;
+  --arrow-filter4: 0;
+  --arrow-filter5: 0;
+  --arrow-filter6: 0;
 }
 
 .dark {
   --text-color: #fff;
   --bg-color: #000;
   --bg-color-2: rgb(55, 55, 55);
+  --arrow-filter1: 98%;
+  --arrow-filter2: 100%;
+  --arrow-filter3: 0%;
+  --arrow-filter4: 7deg;
+  --arrow-filter5: 104%;
+  --arrow-filter6: 101%;
 }
