--- a/countryPage/country.css
+++ b/countryPage/country.css
@@ -123,4 +123,85 @@ header .container .mode-container img {
 }
 .container #back-btn:active {
   filter: brightness(95%);
+}
+.container .info-container {
+  margin-top: 50px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 200px;
+}
+.container .info-container .flag {
+  width: 700px;
+  height: 420px;
+  box-sizing: content-box;
+}
+.container .info-container .flag img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.container .info-container .info {
+  align-self: center;
+}
+.container .info-container .info .main-info {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 100px;
+}
+.container .info-container .info .main-info .left-side {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+.container .info-container .info .main-info .left-side #common-name {
+  font-size: 36px;
+  font-weight: 700;
+}
+.container .info-container .info .main-info .left-side .wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+.container .info-container .info .main-info .left-side .wrapper p {
+  font-weight: 500;
+  font-size: 16px;
+}
+.container .info-container .info .main-info .left-side .wrapper p span {
+  font-weight: 300;
+  margin-left: 5px;
+  font-size: 16px;
+}
+.container .info-container .info .main-info .right-side {
+  align-self: end;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+.container .info-container .info .main-info .right-side p {
+  font-weight: 500;
+  font-size: 16px;
+}
+.container .info-container .info .main-info .right-side p span {
+  font-weight: 300;
+  margin-left: 5px;
+  font-size: 16px;
+}
+.container .info-container .info .border-info {
+  margin-top: 50px;
+  display: flex;
+  align-items: center;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+}
+.container .info-container .info .border-info p {
+  font-weight: 500;
+  font-size: 16px;
+}
+.container .info-container .info .border-info span {
+  padding: 5px 10px;
+  border: 1px solid #888;
+  font-size: 14px;
+  box-shadow: 0px 1px 5px 1px rgba(0, 0, 0, 0.14);
 }/*# sourceMappingURL=country.css.map */
