--- a/countryPage/country.scss
+++ b/countryPage/country.scss
@@ -26,4 +26,100 @@
       filter: brightness(95%);
     }
   }
+
+  .info-container {
+    margin-top: 50px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 200px;
+
+    .flag {
+      width: 700px;
+      height: 420px;
+      box-sizing: content-box;
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+    }
+
+    .info {
+      align-self: center;
+
+      .main-info {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 100px;
+
+        .left-side {
+          display: flex;
+          flex-direction: column;
+          gap: 20px;
+
+          #common-name {
+            font-size: 36px;
+            font-weight: 700;
+          }
+
+          .wrapper {
+            display: flex;
+            flex-direction: column;
+            gap: 5px;
+
+            p {
+              font-weight: 500;
+              font-size: 16px;
+
+              span {
+                font-weight: 300;
+                margin-left: 5px;
+                font-size: 16px;
+              }
+            }
+          }
+        }
+
+        .right-side {
+          align-self: end;
+          display: flex;
+          flex-direction: column;
+          gap: 5px;
+
+          p {
+            font-weight: 500;
+            font-size: 16px;
+
+            span {
+              font-weight: 300;
+              margin-left: 5px;
+              font-size: 16px;
+            }
+          }
+        }
+      }
+
+      .border-info {
+        margin-top: 50px;
+        display: flex;
+        align-items: center;
+        display: flex;
+        flex-wrap: wrap;
+        gap: 10px;
+
+        p {
+          font-weight: 500;
+          font-size: 16px;
+        }
+
+        span {
+          padding: 5px 10px;
+          border: 1px solid $color_2;
+          font-size: 14px;
+          box-shadow: 0px 1px 5px 1px rgba(0, 0, 0, 0.14);
+        }
+      }
+    }
+  }
+  // Container end
 }
